<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.UserFragmentDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="@dimen/user_image_width"
            android:layout_height="@dimen/user_image_height"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:contentDescription="@null"
            android:foregroundGravity="center"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintLeft_toRightOf="@id/user_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_membersince"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/font_subtitle"
            android:textSize="14sp"
            android:typeface="sans"
            app:layout_constraintLeft_toRightOf="@id/user_image"
            app:layout_constraintTop_toBottomOf="@id/user_name" />


        <TextView
            android:id="@+id/lastseen"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/lastseen"
            android:textSize="11sp"
            android:typeface="sans"
            android:layout_marginStart="12dp"
            app:layout_constraintLeft_toRightOf="@id/user_image"
            app:layout_constraintTop_toBottomOf="@id/user_membersince" />

        <View
            android:id="@+id/liner1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/silver"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_image" />

        <TextView
            android:id="@+id/reputation_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/reputation"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/liner1" />

        <TextView
            android:id="@+id/reputation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:typeface="sans"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reputation_txt" />

        <View
            android:id="@+id/liner2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/silver"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reputation" />

        <TextView
            android:id="@+id/tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/toptags"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/liner2" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tag_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="visible"
            app:chipSpacing="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tags"
            app:singleSelection="false" />

        <View
            android:id="@+id/liner4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/silver"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tag_items" />


        <TextView
            android:id="@+id/badge_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/badges"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/liner4" />


        <ImageView
            android:id="@+id/user_goldbadge"
            android:layout_width="@dimen/badge_image_width"
            android:layout_height="@dimen/badge_image_height"
            android:layout_marginTop="24dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_badge_gold"
            app:layout_constraintHorizontal_bias="0.522"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/badge_txt" />

        <TextView
            android:id="@+id/badgegold"
            style="@style/roundtxt"
            android:background="@drawable/ic_round_gold"
            app:layout_constraintBottom_toBottomOf="@id/user_goldbadge"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@id/user_goldbadge"
            app:layout_constraintRight_toRightOf="@id/user_goldbadge"
            app:layout_constraintTop_toTopOf="@id/user_goldbadge"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/user_silverbadge"
            android:layout_width="@dimen/badge_image_width"
            android:layout_height="@dimen/badge_image_height"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_badge_silver"
            app:layout_constraintLeft_toRightOf="@+id/user_goldbadge"
            app:layout_constraintTop_toBottomOf="@id/badge_txt" />


        <TextView
            android:id="@+id/badgesilver"
            style="@style/roundtxt"
            android:background="@drawable/ic_round_silver"
            app:layout_constraintBottom_toBottomOf="@id/user_silverbadge"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@id/user_silverbadge"
            app:layout_constraintRight_toRightOf="@id/user_silverbadge"
            app:layout_constraintTop_toTopOf="@id/user_silverbadge"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/user_bronzebadge"
            android:layout_width="@dimen/badge_image_width"
            android:layout_height="@dimen/badge_image_height"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_badge_bronze"
            app:layout_constraintLeft_toRightOf="@id/user_silverbadge"
            app:layout_constraintTop_toBottomOf="@id/badge_txt" />

        <TextView
            android:id="@+id/badgebronze"
            style="@style/roundtxt"
            android:background="@drawable/ic_round_bronze"
            app:layout_constraintBottom_toBottomOf="@id/user_bronzebadge"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@id/user_bronzebadge"
            app:layout_constraintRight_toRightOf="@id/user_bronzebadge"
            app:layout_constraintTop_toTopOf="@id/user_bronzebadge"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/liner3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/silver"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_bronzebadge" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:drawableLeftCompat="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/liner3" />

        <View
            android:id="@+id/liner5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/silver"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location" />

        <TextView
            android:id="@+id/creationdate_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/createdate"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/liner5" />

        <TextView
            android:id="@+id/creation_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/creationdate_txt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>